--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
@@ -245,3 +245,82 @@ textarea {
   }
 }
 
+body {
+  height: 98vh;
+  background: #21dacb;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  align-self: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 60vw;
+  border-radius: 12px;
+}
+
+#panel-top {
+  padding-inline: 25%;
+  height: 7vh;
+  background: #2ca69d;
+  border-radius: 12px 12px 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#panel-bottom {
+  height: 50vh;
+  background: #b9f4fc;
+  border-radius: 0 0 12px 12px;
+  padding: 2%;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  overflow: auto;
+}
+
+.panel-t-item {
+  padding-inline: 5px;
+  width: 17%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+}
+
+.heading {
+  color: #010002;
+  font-weight: 800;
+}
+
+.value {
+  font-weight: 700;
+  padding: 5px;
+  overflow: auto;
+  min-width: 25px;
+  min-height: 20px;
+  text-align: center;
+  background: white;
+  border-radius: 4px;
+}
+
+.bubble {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #1f8179;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bubble:hover {
+  background: #266761;
+}
